// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SSR Data Exception 1`] = `
<TestClass
  apolloClient={
    Object {
      "cache": Object {
        "extract": [Function],
      },
    }
  }
  apolloState={
    Object {
      "data": Object {},
    }
  }
/>
`;

exports[`SSR Renders 1`] = `
<TestClassWithInit
  apolloClient={
    Object {
      "cache": Object {
        "extract": [Function],
      },
    }
  }
  apolloState={
    Object {
      "data": Object {},
    }
  }
/>
`;
